--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = Levenshtein,PyPDF2,fitz,numpy,pdfminer,pdfplumber,requests,rich,tika
+known_third_party = Levenshtein,PyPDF2,fitz,numpy,pdfminer,pdfplumber,requests,rich,tika,utils
