--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,8 +10,11 @@ repos:
     -   id: check-yaml
     -   id: debug-statements
     -   id: end-of-file-fixer
+        exclude: results/
     -   id: trailing-whitespace
+        exclude: results/
     -   id: mixed-line-ending
+        exclude: results/
     -   id: check-added-large-files
         args: ['--maxkb=1000']
 -   repo: https://gitlab.com/pycqa/flake8
