PDFium: Add benchmark

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = Levenshtein,PyPDF2,borb,fitz,numpy,pdfminer,pdfplumber,pydantic,requests,rich,tika
+known_third_party = Levenshtein,PyPDF2,borb,fitz,numpy,pdfminer,pdfplumber,pydantic,pypdfium2,requests,rich,tika
