--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # pre-commit run --all-files
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.4.0
     hooks:
     -   id: check-ast
     -   id: check-byte-order-marker
@@ -17,8 +17,8 @@ repos:
         exclude: results/
     -   id: check-added-large-files
         args: ['--maxkb=1000']
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+-   repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
     hooks:
     -   id: flake8
         args: ["--ignore", "E,W,F"]
@@ -26,16 +26,13 @@ repos:
 #     rev: v0.942
 #     hooks:
 #     -   id: mypy
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-    hooks:
-    -   id: seed-isort-config
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.1
+-   repo: https://github.com/pycqa/isort
+    rev: 5.11.4
     hooks:
     -   id: isort
+        name: isort (python)
 -   repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.12.0
     hooks:
     -   id: black
 # -   repo: https://github.com/asottile/pyupgrade
