--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
 #     hooks:
 #     -   id: mypy
 -   repo: https://github.com/pycqa/isort
-    rev: 5.11.4
+    rev: 5.11.5
     hooks:
     -   id: isort
         name: isort (python)
@@ -45,3 +45,13 @@ repos:
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==22.1.0]
+-   repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.0.275'
+    hooks:
+    -   id: ruff
+        args: ['--fix']
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v3.7.0
+    hooks:
+    -   id: pyupgrade
+        args: [--py311-plus]
